[tool.poetry]
name = "validator"
version = "0.1.0"
description = ""
authors = ["Anton Orekhovskiy <anton.orekhovskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
swagger-parser = "^1.0.2"
six = "^1.16.0"
betamax = "^0.8.1"
openapi-core = "^0.16.4"
munch = "^2.5.0"
requests = "^2.28.1"
jsonpickle = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
